Fix some spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -322,8 +322,8 @@ h2, h3, h4, h5, h6 {
 
 h2 {
   font-size: 2.2em;
-  line-height: $line-height * 3;
-  margin-bottom: 0;
+  line-height: $line-height * 2;
+  margin-bottom: $line-height;
 
   a {
     color: inherit;
@@ -575,11 +575,6 @@ div.post-separator {
     .MathJax_Display {
       overflow-x: auto;
       overflow-y: hidden;
-    }
-
-    .post-date {
-      margin-top: 0;
-      margin-bottom: $line-height;
     }
 
     .previous-post {
